[tool.poetry]
name = "yuzu"
version = "0.1.0"
description = "Minecraft docker-based server manager"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
click = "8.1.3"
requests = "2.28.2"
docker = "6.0.1"
misilelibpy = { path = "misilelib/misilelib-python" }
tomli = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
